WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198540
Fix 64-bit vs 32-bit mismatch in TileController.cpp
https://bugs.webkit.org/show_bug.cgi?id=198540
Summary
Fix 64-bit vs 32-bit mismatch in TileController.cpp
Keith Rollin
Reported
2019-06-04 13:08:22 PDT
TileController::blankPixelCountForTiles calculates its result as a uint64_t, but returns it as an unsigned. The former is a 64-bit value, while the latter can be a 32-bit value on some platforms. This mismatch can lead to a compile-time error. Fix this by explicitly casting the 64-bit value to a "signed".
Attachments
Patch
(1.82 KB, patch)
2019-06-04 13:11 PDT
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Patch
(1.83 KB, patch)
2019-06-04 17:08 PDT
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Patch
(1.83 KB, patch)
2019-06-04 17:10 PDT
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-04 13:08:50 PDT
<
rdar://problem/51410851
>
Keith Rollin
Comment 2
2019-06-04 13:11:36 PDT
Created
attachment 371323
[details]
Patch
Brent Fulgham
Comment 3
2019-06-04 16:45:44 PDT
Comment on
attachment 371323
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=371323&action=review
> Source/WebCore/ChangeLog:13 > + casting the 64-bit value to a "signed".
signed -> unsigned?
Keith Rollin
Comment 4
2019-06-04 17:08:41 PDT
Created
attachment 371352
[details]
Patch
Keith Rollin
Comment 5
2019-06-04 17:09:22 PDT
Thanks. Fixed the think-o.
Keith Rollin
Comment 6
2019-06-04 17:10:21 PDT
Created
attachment 371353
[details]
Patch
WebKit Commit Bot
Comment 7
2019-06-04 17:26:16 PDT
Comment on
attachment 371353
[details]
Patch Clearing flags on attachment: 371353 Committed
r246091
: <
https://trac.webkit.org/changeset/246091
>
WebKit Commit Bot
Comment 8
2019-06-04 17:26:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug